# CChess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Sources/: WinEntry.cpp  base.h  base_config.h
